# Haskell

./: HaskellWorkspace.lkshs  HaskellWorkspace.lkshw
CreateStatusReport/: CreateStatusReport.cabal
CreateStatusReport/src/: Main.hs
